--- a/Sources/Indicators/Bollinger_Multiple/Bollinger_Multiple/Bollinger_Multiple.csproj
+++ b/Sources/Indicators/Bollinger_Multiple/Bollinger_Multiple/Bollinger_Multiple.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7A985138-126E-4220-A70F-77D66CB94DF6}</ProjectGuid>
+    <ProjectGuid>{F3F7F0FD-ACEB-4184-9799-67304C0B3A5D}</ProjectGuid>
     <ProjectTypeGuids>{DD87C1B2-3799-4CA2-93B6-5288EE928820};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>cAlgo</RootNamespace>
-    <AssemblyName>TriForce_IND</AssemblyName>
+    <AssemblyName>Bollinger_Multiple</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -44,7 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TriForce_IND.cs" />
+    <Compile Include="Bollinger_Multiple.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
