--- a/Sources/Robots/BollCross/BollCross/BollCross.csproj
+++ b/Sources/Robots/BollCross/BollCross/BollCross.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{573FE12E-8CE1-486D-A4A1-61D43C81F4E9}</ProjectGuid>
+    <ProjectGuid>{22436401-2DC4-449F-A341-E47BBDD49906}</ProjectGuid>
     <ProjectTypeGuids>{DD87C1B2-3799-4CA2-93B6-5288EE928820};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>cAlgo</RootNamespace>
-    <AssemblyName>DouBollingerTrend</AssemblyName>
+    <AssemblyName>BollCross</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -45,9 +45,12 @@
     <Reference Include="cAlgo.Lib">
       <HintPath>..\..\..\Library\cAlgoLib\bin\Debug\cAlgo.Lib.dll</HintPath>
     </Reference>
+    <Reference Include="DoubleBollStrategy">
+      <HintPath>..\..\..\Strategies\DoubleBollStrategy\bin\Debug\DoubleBollStrategy.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DouBollingerTrend.cs" />
+    <Compile Include="BollCross.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
