--- a/Sources/Strategies/EEStrategy/EEStrategy/EEStrategy.csproj
+++ b/Sources/Strategies/EEStrategy/EEStrategy/EEStrategy.csproj
@@ -48,7 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="EEStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
