--- a/Sources/Indicators/MC_EURJPY/MC_EURJPY/MC_EURJPY.csproj
+++ b/Sources/Indicators/MC_EURJPY/MC_EURJPY/MC_EURJPY.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>cAlgo</RootNamespace>
-    <AssemblyName>MC_EURGBP</AssemblyName>
+    <AssemblyName>MC_EURJPY</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -47,7 +47,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MC_EURGBP.cs" />
+    <Compile Include="MC_EURJPY.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
