--- a/Sources/Robots/ArbitrageHedgeUSD v1.0/ArbitrageHedgeUSD v1.0/ArbitrageHedgeUSD v1.0.csproj
+++ b/Sources/Robots/ArbitrageHedgeUSD v1.0/ArbitrageHedgeUSD v1.0/ArbitrageHedgeUSD v1.0.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>cAlgo</RootNamespace>
-    <AssemblyName>ArbitrageHedgeUSD</AssemblyName>
+    <AssemblyName>ArbitrageHedgeUSD v1.0</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -47,7 +47,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArbitrageHedgeUSD.cs" />
+    <Compile Include="ArbitrageHedgeUSD v1.0.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -59,10 +59,6 @@
   </Target>
   -->
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Indicators\USD_GBPCHF\USD_GBPCHF\USD_GBPCHF.csproj">
-      <Project>{DC5A2BB9-CD60-411F-921E-7FA26730FC14}</Project>
-      <Name>USD_GBPCHF</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\Indicators\USD_GBPEUR\USD_GBPEUR\USD_GBPEUR.csproj">
       <Project>{DC5A2BB9-CD60-411F-921E-7FA26730FC14}</Project>
       <Name>USD_GBPEUR</Name>
@@ -70,6 +66,10 @@
     <ProjectReference Include="..\..\..\Indicators\USD_EURCHF\USD_EURCHF\USD_EURCHF.csproj">
       <Project>{DC5A2BB9-CD60-411F-921E-7FA26730FC14}</Project>
       <Name>USD_EURCHF</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Indicators\USD_GBPCHF\USD_GBPCHF\USD_GBPCHF.csproj">
+      <Project>{DC5A2BB9-CD60-411F-921E-7FA26730FC14}</Project>
+      <Name>USD_GBPCHF</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
