--- a/Sources/Robots/ArbitrageHedge_chf_eur_gbp/ArbitrageHedge_chf_eur_gbp/ArbitrageHedge_chf_eur_gbp.csproj
+++ b/Sources/Robots/ArbitrageHedge_chf_eur_gbp/ArbitrageHedge_chf_eur_gbp/ArbitrageHedge_chf_eur_gbp.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>cAlgo</RootNamespace>
-    <AssemblyName>ArbitrageHedgeUSD v3.0</AssemblyName>
+    <AssemblyName>ArbitrageHedge_chf_eur_gbp</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -47,7 +47,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArbitrageHedgeUSD v3.0.cs" />
+    <Compile Include="ArbitrageHedge_chf_eur_gbp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
