--- a/Sources/Indicators/CHFEURGBP/CHFEURGBP/CHFEURGBP.csproj
+++ b/Sources/Indicators/CHFEURGBP/CHFEURGBP/CHFEURGBP.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F9DDE63B-CFF8-4762-B206-6F5F75FAD6A8}</ProjectGuid>
+    <ProjectGuid>{397C5F1C-2A1B-41AD-8642-A8770B8A675C}</ProjectGuid>
     <ProjectTypeGuids>{DD87C1B2-3799-4CA2-93B6-5288EE928820};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>cAlgo</RootNamespace>
-    <AssemblyName>USD_GBPEUR</AssemblyName>
+    <AssemblyName>CHFEURGBP</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -47,7 +47,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="USD_GBPEUR.cs" />
+    <Compile Include="CHFEURGBP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
