--- a/Sources/Robots/ArbitrageHedge_Wave/ArbitrageHedge_Wave/ArbitrageHedge_Wave.csproj
+++ b/Sources/Robots/ArbitrageHedge_Wave/ArbitrageHedge_Wave/ArbitrageHedge_Wave.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>cAlgo</RootNamespace>
-    <AssemblyName>ArbitrageHedge_EURCHF_H</AssemblyName>
+    <AssemblyName>ArbitrageHedge_Wave</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -47,18 +47,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArbitrageHedge_EURCHF_H.cs" />
+    <Compile Include="ArbitrageHedge_Wave.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Indicators\EURCHF_Highlight\EURCHF_Highlight\EURCHF_Highlight.csproj">
-      <Project>{001A403F-E95A-466D-B98E-F07F9F91AA3D}</Project>
-      <Name>EURCHF_Highlight</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Indicators\EURCHF_Sub_Highlight\EURCHF_Sub_Highlight\EURCHF_Sub_Highlight.csproj">
-      <Project>{D3CF9E4F-0969-4AFA-BA21-F355F754A1E1}</Project>
-      <Name>EURCHF_Sub_Highlight</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -68,4 +58,14 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Indicators\Wave_Currency_Highlight\Wave_Currency_Highlight\Wave_Currency_Highlight.csproj">
+      <Project>{001A403F-E95A-466D-B98E-F07F9F91AA3D}</Project>
+      <Name>Wave_Currency_Highlight</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Indicators\Wave_Currency_Sub_Highlight\Wave_Currency_Sub_Highlight\Wave_Currency_Sub_Highlight.csproj">
+      <Project>{D3CF9E4F-0969-4AFA-BA21-F355F754A1E1}</Project>
+      <Name>Wave_Currency_Sub_Highlight</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
