--- a/Sources/Robots/TEST/TEST/TEST.csproj
+++ b/Sources/Robots/TEST/TEST/TEST.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2B4A7A01-D7D2-4EE9-8C4D-7B86F455C10E}</ProjectGuid>
+    <ProjectGuid>{4FEE23A9-D919-49FE-B354-183D39B64401}</ProjectGuid>
     <ProjectTypeGuids>{DD87C1B2-3799-4CA2-93B6-5288EE928820};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>cAlgo</RootNamespace>
-    <AssemblyName>ArbitrageHedge_Other</AssemblyName>
+    <AssemblyName>TEST</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -34,8 +34,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -44,43 +42,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\API\cAlgo.API.dll</HintPath>
     </Reference>
-    <Reference Include="cAlgo.Lib">
-      <HintPath>..\..\..\..\API\cAlgo.Lib.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArbitrageHedge_Other.cs" />
-    <Compile Include="Cbotset.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Cbotset.designer.cs">
-      <DependentUpon>Cbotset.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Main.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Main.designer.cs">
-      <DependentUpon>Main.cs</DependentUpon>
-    </Compile>
+    <Compile Include="TEST.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Indicators\Currency_Highlight\Currency_Highlight\Currency_Highlight.csproj">
-      <Project>{001A403F-E95A-466D-B98E-F07F9F91AA3D}</Project>
-      <Name>Currency_Highlight</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Indicators\Currency_Sub_Highlight\Currency_Sub_Highlight\Currency_Sub_Highlight.csproj">
-      <Project>{D3CF9E4F-0969-4AFA-BA21-F355F754A1E1}</Project>
-      <Name>Currency_Sub_Highlight</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Cbotset.resx">
-      <DependentUpon>Cbotset.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Main.resx">
-      <DependentUpon>Main.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
