--- a/Sources/Robots/MACS_Oil/MACS_Oil/MACS_Oil.csproj
+++ b/Sources/Robots/MACS_Oil/MACS_Oil/MACS_Oil.csproj
@@ -45,6 +45,9 @@
     <Reference Include="cAlgo.Lib">
       <HintPath>..\..\..\..\API\cAlgo.Lib.dll</HintPath>
     </Reference>
+    <Reference Include="CSVLib">
+      <HintPath>..\..\..\..\API\CSVLib.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MACS_Oil.cs" />
