--- a/Sources/Robots/ToSql_macs_magnify/ToSql_macs_magnify/ToSql_macs_magnify.csproj
+++ b/Sources/Robots/ToSql_macs_magnify/ToSql_macs_magnify/ToSql_macs_magnify.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3D9B97B0-90D9-4451-AF48-075B42537477}</ProjectGuid>
+    <ProjectGuid>{AC8904F3-DFF5-4E53-A07C-206A8238A663}</ProjectGuid>
     <ProjectTypeGuids>{DD87C1B2-3799-4CA2-93B6-5288EE928820};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>cAlgo</RootNamespace>
-    <AssemblyName>ToSql</AssemblyName>
+    <AssemblyName>ToSql_macs_magnify</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -50,7 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ToSql.cs" />
+    <Compile Include="ToSql_macs_magnify.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -62,29 +62,13 @@
   </Target>
   -->
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Indicators\Metals_MAC\Metals_MAC\Metals_MAC.csproj">
-      <Project>{63FCCF06-7483-45F7-A378-8300DEDF5879}</Project>
-      <Name>Metals_MAC</Name>
+    <ProjectReference Include="..\..\..\Indicators\_Magnify_MAC\_Magnify_MAC\_Magnify_MAC.csproj">
+      <Project>{4DACF84E-B2ED-484A-AF31-E892076A8041}</Project>
+      <Name>_Magnify_MAC</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Indicators\Metals_MAS\Metals_MAS\Metals_MAS.csproj">
-      <Project>{8B82BCC7-716F-4FAE-A595-D69034431C76}</Project>
-      <Name>Metals_MAS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Indicators\Oil_MAC\Oil_MAC\Oil_MAC.csproj">
-      <Project>{EB30E95F-0A01-45D6-9BE9-7152A194B8DA}</Project>
-      <Name>Oil_MAC</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Indicators\Oil_MAS\Oil_MAS\Oil_MAS.csproj">
-      <Project>{A25947F7-9E20-48E0-8E1C-0115F84A55C9}</Project>
-      <Name>Oil_MAS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Indicators\SMAC\SMAC\SMAC.csproj">
-      <Project>{175D4B24-BADC-4760-B565-48F5E900CCA5}</Project>
-      <Name>SMAC</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Indicators\SMAS\SMAS\SMAS.csproj">
-      <Project>{C35E0699-6C93-4483-B4FC-9EA2FCC5075C}</Project>
-      <Name>SMAS</Name>
+    <ProjectReference Include="..\..\..\Indicators\_Magnify_MAS\_Magnify_MAS\_Magnify_MAS.csproj">
+      <Project>{BCE3082A-0491-4C6D-8E9A-0B6A85B322B2}</Project>
+      <Name>_Magnify_MAS</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
