--- a/Sources/Robots/MACS/MACS/MACS.csproj
+++ b/Sources/Robots/MACS/MACS/MACS.csproj
@@ -32,6 +32,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JsonLib">
+      <HintPath>..\..\..\..\API\JsonLib.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\API\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,9 +51,6 @@
     </Reference>
     <Reference Include="cAlgo.Lib">
       <HintPath>..\..\..\..\API\cAlgo.Lib.dll</HintPath>
-    </Reference>
-    <Reference Include="CSVLib">
-      <HintPath>..\..\..\..\API\CSVLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
